--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ subprojects {
     repositories {
         mavenCentral()
         maven {
-            url 'https://nexus.jmix.io/repository/public'
+            url 'https://global.repo.jmix.io/repository/public'
         }
     }
 
