Show element documentation in markdown format

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ subprojects {
     repositories {
         mavenCentral()
         maven {
+            url = 'https://nexus.openbpm.io/repository/public'
+        }
+        maven {
             url 'https://global.repo.jmix.io/repository/public'
         }
     }
