--- a/openbpm-ui-kit/openbpm-ui-kit.gradle
+++ b/openbpm-ui-kit/openbpm-ui-kit.gradle
@@ -8,7 +8,7 @@ archivesBaseName = 'openbpm-ui-kit'
 dependencies {
     implementation 'io.jmix.core:jmix-core-starter'
     implementation 'io.jmix.flowui:jmix-flowui-starter'
-    implementation 'io.jmix.mdeditor:jmix-mdeditor-flowui-starter:0.0.1-SNAPSHOT'
+    implementation 'io.jmix.mdeditor:jmix-mdeditor-flowui-starter'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
