--- a/openbpm-ui-kit/openbpm-ui-kit.gradle
+++ b/openbpm-ui-kit/openbpm-ui-kit.gradle
@@ -8,7 +8,9 @@ archivesBaseName = 'openbpm-ui-kit'
 dependencies {
     implementation 'io.jmix.core:jmix-core-starter'
     implementation 'io.jmix.flowui:jmix-flowui-starter'
-    implementation 'io.jmix.mdeditor:jmix-mdeditor-flowui-starter'
+
+    def mdeditorVersion = '1.0.0-SNAPSHOT'
+    implementation "io.jmix.mdeditor:jmix-mdeditor-flowui-starter:$mdeditorVersion"
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
