--- a/openbpm-ui-kit/openbpm-ui-kit.gradle
+++ b/openbpm-ui-kit/openbpm-ui-kit.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation 'io.jmix.core:jmix-core-starter'
     implementation 'io.jmix.flowui:jmix-flowui-starter'
 
-    def mdeditorVersion = '1.0.0-SNAPSHOT'
+    def mdeditorVersion = '1.0.0-beta.6'
     implementation "io.jmix.mdeditor:jmix-mdeditor-flowui-starter:$mdeditorVersion"
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
